# BucketViewer-S3Client

./: FILETYPE_FEATURES.md  LICENSE  S3_IMPLEMENTATION.md  USAGE_GUIDE.md  package-lock.json  package.json  vite.config.ts
public/: settings.json
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  s3_commands.rs  s3_service.rs  settings.rs
src/components/: BucketList.tsx  FileExplorer.tsx  Header.tsx  S3Demo.tsx  Settings.tsx  SettingsDemo.tsx  SideBar.tsx  StatusBar.tsx  Toast.tsx
src/components/ui/: connect.tsx
src/services/: fileDialogService.ts  s3Service.ts  settingsService.ts
src/tests/: settingsTest.ts
src/types/: s3.ts  settings.ts
